fix: add new media query to disable zoom input on ios

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
   display: none;
 }
 
-@supports (-webkit-overflow-scrolling: touch) {
+@media (hover: none) and (pointer: coarse) {
   input,
   textarea {
     font-size: 16px;
